styles.css
/*Import fonts*/
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Nunito&display=swap');
/*---*/

body {
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}

hr {
    height: 3px;
    border: none;
    background-color: white;
    width: 30%;
}

.container p {
    z-index: 1;
    font-family: 'Nunito', sans-serif;
    margin: 10px;
    font-size: 1.1em;
    max-width: 900px;
}

.container pSmall {
  color: gray;
    z-index: 1;
    font-family: 'Nunito', sans-serif;
    margin: 10px;
    font-size: 1.1em;
    max-width: 900px;
}

.container h1, h2, h3, h4, h5, h6 {
    z-index: 1;
    font-family: 'Nova Square', sans-serif;
    margin: 5px;
}

.container h1 {
    font-size: 5em;
}

.container h2 {
    font-size: 2em;
}

.container a img {
    margin: 5px;
    z-index: 1;
}

a {
    color: white;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.container .game {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 200px;

    background-color: black;
    color: white;
    min-width: 98vw;
    min-height: 100vh;

    text-align: center;
}

/* Game videos */
.container .game video{
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: brightness(50%);
    z-index: 0;
    position: absolute;
}

#mainVideo {
    transition: opacity 0.5s ease-in-out;
}

.container .game .tilebackground{
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 0.5;
    background-image: url("media/img/tile.png");
    border:none;
}

/* Game Logos */
.container .game .logo { /* Generic Logos */

    margin-top: 50px;
    width: 80%;
    max-width: 500px;
    height: auto;
    z-index: 1;
    display: block;

    filter: drop-shadow(0 0 20px black);
    transition: 100ms linear;
}

.container .game .logo:hover {
    transform: scale(1.05);
    filter: drop-shadow(0 0 5px white);
}

.container .game .logoOst { /* OST cover, no margin. */
    margin: 0px;
    width: 80%;
    max-width: 500px;
    height: auto;
    z-index: 1;
    display: block;

    filter: drop-shadow(0 0 5px white);
    transition: 100ms linear;
}

.container .game .logoOst:hover {
    transform: scale(1.05);
    filter: drop-shadow(0 0 10px white);
}

.container .game .logoMain { /* Main PVIC Logo */
    margin: 20px;
    width: 90%;
    max-width: 700px;
    height: auto;
    z-index: 1;
    display: block;

    filter: drop-shadow(0 0 5px white);
    transition: 100ms linear;
}

.container .game .logoMain:hover {
    transform: scale(1.05);
    filter: drop-shadow(0 0 10px white);
}

/*Badges*/
.container .game .badges {
    z-index: 1;
}

.container .game .badges img {
    z-index: 1;
    filter: drop-shadow(0 0 10px black);
    transition: 100ms linear;
    width: 90%;
    max-width: 192px;
}

.container .game .badges img:hover {
    transform: scale(1.05);
    filter: drop-shadow(0 0 10px white);
}

/*About Section*/
.container .game#about {
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-origin: border-box;
}

.container .game#contact {
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('media/img/backgrounds/contact.jpg');
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-origin: border-box;
}

/* Member Section */
#texto_conteudo {
    text-align: left;
    width: 90%;
    z-index: 1;
}

#members h1 {
    margin: 0px;
    font-size: 3.5em;
}

.container .game#members {
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('media/img/background_sobre.jpg');
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-origin: border-box;
    min-height: 250vh;
}

.members_row {
    display: flex;
    width: 100%;
    max-width: 600px;
    margin: 35px 5px 5px 5px;
}

.member_section {
    margin: 5px;
    width: 100%;
}

.member_section img {
    width: 90%;
    height: auto;
    padding: 0px;
    margin: 0px;

    transition: filter 100ms linear, transform 100ms linear, border-radius 100ms linear;
    filter: drop-shadow(0 0 10px black) brightness(100%);
    transform: scale(1);
    border-radius: 50%;
}

.member_section img:hover {
    transition: filter 220ms linear, transform 100ms linear, border-radius 100ms linear;
    filter: drop-shadow(0 0 20px black) brightness(50%);
    border-radius: 20%;
    transform: scale(1.05);
}

.member_section h2 {
    font-size: min(5vw, 30px);
    margin: 0px;
}

.member_section p {
    font-size: min(4vw, 12px);
    margin: 0px;
}

/*Contact section*/
.follow_section {
    display: flex;
    width: 100%;
    max-width: 600px;
    margin: 0px;
    padding: 0px;
}

.follow_section a{
    margin: 10px;
}

.follow_section img {
    max-width: 100%;
    margin: 0px;
    padding: 0px;

    transition: filter 100ms linear, transform 100ms linear, border-radius 100ms linear;
    filter: drop-shadow(0 0 10px black) brightness(100%) invert(0%);
    transform: scale(1);
    border-radius: 30%;
}

.follow_section img:hover {
    transition: filter 220ms linear, transform 100ms linear, border-radius 100ms linear;
    filter: drop-shadow(0 0 20px black) brightness(50%) invert(100%);
    border-radius: 20%;
    transform: scale(1.05);
}
/*Contact section*/
.follow_section_small {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 880px;
    margin: 0 auto;
}

.follow_section_small a {
    margin: 0 10px;
}

.follow_section_small img {
    width: 40px;
    height: 40px;
    border-radius: 45%; /* Make icons circular */
}


.follow_section_small img:hover {
    transition: filter 220ms linear, transform 100ms linear, border-radius 100ms linear;
    filter: drop-shadow(0 0 20px black) brightness(50%) invert(100%);
    border-radius: 35%;
    transform: scale(1.05);
}
/* Styling the navigation menu */
nav {
    position: fixed;
    top: 0;
    overflow: hidden;
    width: 100%;
    color: #fff;
    padding: 0%;
    z-index: 1001;
    backdrop-filter: blur(25px);
    background-color: rgba(81, 81, 81, 0.3);
    transition: top 0.3s ease;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: center; /* Center the content */
    align-items: center;
    /*padding: 0 20px; /* Add padding to the left and right */
}

nav ul li a {
    font-family: 'Nunito', sans-serif;
    margin: 10px;
    font-size: 1.1em;
    font-weight: bold;
}

nav ul li a:hover {
    filter: drop-shadow(0 0 20px black) brightness(0%) invert(100%);
}

.navbar a:hover, .subnav:hover .subnavbtn {
    filter: drop-shadow(0 0 20px black) brightness(0%) invert(100%);
}

.subnav {
    float: left;
    overflow: hidden;
    top: 0;
}

.subnav .subnavbtn {
    padding: 0px;
    font-family: 'Nunito', sans-serif;
    font-size: 1.1em;
    color: inherit;
    font-weight: bold;
    cursor: pointer;
}

@keyframes subnav-color-transition {
    from {background-color: rgba(81, 81, 81, 0.3);}
    to {background-color: rgba(124, 124, 124, 0.3);}
}
.subnav-content {
    display: none;
    position: absolute;
    left: 0;
    width: 100%;
    height: 200%;
    background-color: rgba(124, 124, 124, 0.3);
    animation-name: subnav-color-transition;
    animation-duration: 0.3s;
    z-index: 1;
}

.subnav-content a img {
    max-height: 40px;
    float: left;
    overflow: hidden;
}

.subnav-content a img:hover {
    filter: drop-shadow(0 0 20px black) brightness(0%) invert(100%);
}

.subnav:hover .subnav-content {
    display: block;
}


@media (max-width: 768px) {
    /* Reduce font size in small screens */
    nav ul li a {
        font-size: 0.8em;
    }
}

.horizontal-list {
    list-style-type: none;
    padding: 0;
}

.horizontal-list li {
    display: inline;
    margin-right: 20px;
}

.horizontal-list li:last-child {
    margin-right: 0;
}
.foot a {
    color:white;
    font-family: 'Nunito', sans-serif;
    font-size: 1.1em;
    padding: 0;
}

.swiper-button-next {
    padding-left: 6%;
    padding-right: 6%;
    transform: scale(1.1);
    filter: drop-shadow(0 0 0.75rem white)
}

.swiper-button-prev {
    padding-left: 6%;
    padding-right: 6%;
    transform: scale(1.1);
    filter: drop-shadow(0 0 0.75rem white);
}

.swiper-button-next:hover, .swiper-button-prev:hover {
    /* glow */
    filter: drop-shadow(0 0 40px black) brightness(0%) invert(100%);
}
@media (max-width: 768px) {
    .swiper-button-next,
    .swiper-button-prev,
    .swiper-pagination {
        display: none !important;
    }
}

